--- a/templates/post.html
+++ b/templates/post.html
@@ -132,11 +132,6 @@
     </style>
 
     <script>
-        let y_cen = {{post.y}};   // lat
-        let x_cen = {{post.x}};  // long
-        let map;
-        let markers = [];
-        let infowindows = [];
         $(document).ready(function () {
             var floatPosition = parseInt($(".sideBanner").css('top'))
 
@@ -162,24 +157,13 @@
 
                 } else {
                     document.getElementById("frame").style.visibility = "hidden"
-                    window.location.href = "http://localhost:5000/"
+
+                    window.location.href = "http://localhost:5000/posts/{{ post.idx }}"
                 }
             });
-
-
-              map = new naver.maps.Map('map', {
-                    center: new naver.maps.LatLng(y_cen, x_cen),
-                    zoom: 12,
-                    zoomControl: true,
-                    zoomControlOptions: {
-                        style: naver.maps.ZoomControlStyle.SMALL,
-                        position: naver.maps.Position.TOP_RIGHT
-                    }
-                });
-
-                get_locate();
-
         });
+
+
         function search() {
             let query = $('#search-box').val();
             if (query == "") {
@@ -224,7 +208,6 @@
                 Kakao.Auth.setAccessToken(undefined)
             }
         }
-
 
     </script>
 </head>
@@ -294,7 +277,7 @@
 </div>
 
 <div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden;">
-    <iframe src="http://localhost:5000/posts/{{ post.post_id }}/chat" width="320" height="480"></iframe>
+    <iframe src="http://localhost:5000/posts/{{ post.idx }}/chat" width="320" height="450"></iframe>
 </div>
 </body>
 </html>
