--- a/templates/user.html
+++ b/templates/user.html
@@ -24,6 +24,8 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
     <style>
         body {
@@ -157,22 +159,60 @@
         }
 
 
-        function update_profile() {
-            if ($("#help-nickname").hasClass("is-danger")) {
+        function update_profile(old_nickname) {
+            let name = $('#input-nickname').val()
+            let file = $('#input-pic')[0].files[0]
+            let about = $("#textarea-about").val()
+            let password = $('#input-password').val()
+            let password2 = $("#input-password2").val()
+            let address = $('#input-address').val()
+
+            if (name == old_nickname) {
+                console.log(old_nickname)
+            } else if ($("#help-nickname").hasClass("is-danger")) {
                 alert("닉네임을 다시 확인해주세요.")
                 return;
             } else if (!$("#help-nickname").hasClass("is-success")) {
                 alert("닉네임 중복확인을 해주세요.")
                 return;
             }
-            let name = $('#input-nickname').val()
-            let file = $('#input-pic')[0].files[0]
-            let about = $("#textarea-about").val()
+
+            if (password == "") {
+                $("#help-password").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password").focus()
+            } else if (!is_password(password)) {
+                $("#help-password").text("비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").removeClass("is-safe").addClass("is-danger")
+                $("#input-password").focus()
+            } else {
+                $("#help-password").text("사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+            }
+
+            if (password2 == "") {
+                $("#help-password2").text("비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password2").focus()
+                return;
+            } else if (password2 != password) {
+                $("#help-password2").text("비밀번호가 일치하지 않습니다.").removeClass("is-safe").addClass("is-danger")
+                $("#input-password2").focus()
+                return;
+            } else {
+                $("#help-password2").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
+            }
+
+            if (address == "") {
+                $("#help-address").text("주소를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-address").focus()
+                return;
+            }
+
+
+
             let form_data = new FormData()
             form_data.append("file_give", file)
             form_data.append("name_give", name)
             form_data.append("about_give", about)
-            console.log(name, file, about, form_data)
+            form_data.append("address_give", address)
+            form_data.append("password_give", password)
 
             $.ajax({
                 type: "POST",
@@ -190,9 +230,14 @@
             });
         }
 
+        function is_password(asValue) {
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
         function check_dup_nick() {
             let nickname = $("#input-nickname").val()
-            console.log(nickname)
+
             if (nickname == "") {
                 $("#help-nickname").text("닉네임을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
                 $("#input-nickname").focus()
@@ -218,6 +263,61 @@
                 }
             });
         }
+
+        function check_pw() {
+            let pw = $("#input-check-pw").val();
+
+            if (pw == "") {
+                $("#help-check-password").text("비밀번호를 입력해주세요.")
+                $("#input-check-pw").focus()
+                return
+            } else {
+                $("#input-check-pw").val("")
+            }
+
+            $.ajax({
+                type: "POST",
+                url: "/check",
+                data: {
+                    password_give: pw
+                },
+                success: function (response) {
+                    if (response["result"]) {
+                        $("#help-check-password").removeClass("is-danger")
+                        $("#help-check-password").text("비밀번호를 입력해주세요.")
+                        $("#modal-check-pw").removeClass("is-active")
+                        $("#modal-edit").addClass("is-active")
+                    } else {
+                        $("#help-check-password").text("비밀번호가 틀렸습니다.")
+                        $("#help-check-password").addClass("is-danger")
+                        $("#input-check-pw").val("")
+                    }
+                }
+            });
+        }
+
+        function juso() {
+            new daum.Postcode({
+                oncomplete: function (data) {
+                    var roadAddr = data.roadAddress; // 도로명 주소 변수
+                    var extraRoadAddr = ''; // 참고 항목 변수
+
+                    if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
+                        extraRoadAddr += data.bname;
+                    }
+                    if (data.buildingName !== '' && data.apartment === 'Y') {
+                        extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    if (extraRoadAddr !== '') {
+                        extraRoadAddr = ' (' + extraRoadAddr + ')';
+                    }
+
+                    newjuso = data.jibunAddress.split(' ').slice(0, -1).join(' ')
+                    document.getElementById("input-address").value = newjuso // 지번주소
+                }
+            }).open();
+        }
+
     </script>
 
 </head>
@@ -251,7 +351,7 @@
         {% if status %}
         <nav id="btns-me" class="level is-mobile" style="margin-top:2rem">
             <a class="button level-item has-text-centered is-sparta" aria-label="edit"
-               onclick='$("#modal-edit").addClass("is-active")'>
+               onclick='$("#modal-check-pw").addClass("is-active")'>
                 프로필 수정&nbsp;&nbsp;&nbsp;<span class="icon is-small"><i class="fa fa-pencil"
                                                                        aria-hidden="true"></i></span>
             </a>
@@ -261,6 +361,30 @@
                                                                      aria-hidden="true"></i></span>
             </a>
         </nav>
+        <!--정보수정 전에 비밀번호를 통해 확인하는 모달-->
+        <div class="modal" id="modal-check-pw">
+            <div class="modal-background" onclick='$("#modal-check-pw").removeClass("is-active")'></div>
+            <div class="modal-content">
+                <div class="box">
+                    <article class="media">
+                        <div class="media-content">
+                            <div class="field">
+                                <label class="label" for="input-check-pw">비밀번호</label>
+                                <p>
+                                    <input id="input-check-pw" class="input" type="password"
+                                           value="" style="width: 520px">
+                                    <button class="button is-light" style="float: right" onclick="check_pw()">확인
+                                    </button>
+                                <p id="help-check-password" class="help">비밀번호를 입력해주세요.</p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <button class="modal-close is-large" aria-label="close"
+                    onclick='$("#modal-check-pw").removeClass("is-active")'></button>
+        </div>
+        <!--정보수정 전에 비밀번호를 통해 확인하는 모달-->
         <div class="modal" id="modal-edit">
             <div class="modal-background" onclick='$("#modal-edit").removeClass("is-active")'></div>
             <div class="modal-content">
@@ -271,11 +395,34 @@
                                 <label class="label" for="input-nickname">이름</label>
                                 <p>
                                     <input id="input-nickname" class="input" placeholder="{{ user_info.nickname }}"
-                                           value="{{ user_info.profile_name }}" style="width: 500px">
+                                           value="{{ user_info.nickname }}" style="width: 450px">
                                     <button class="button is-light" style="float: right" onclick="check_dup_nick()">
                                         중복확인
                                     </button>
-                                <p id="help-nickname" class="help">닉네임을 입력해주세요</p>
+                                <p id="help-nickname" class="help">닉네임을 입력해주세요.</p>
+                            </div>
+                            <div class="field">
+                                <label class="label" for="input-password">비밀번호</label>
+                                <p>
+                                    <input id="input-password" class="input" type="password">
+                                <p id="help-password" class="help">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도
+                                    사용 가능합니다.</p>
+                            </div>
+                            <div class="field">
+                                <label class="label" for="input-password">비밀번호 확인</label>
+                                <p>
+                                    <input id="input-password2" class="input" type="password">
+                                <p id="help-password2" class="help">비밀번호를 다시 입력해주세요.</p>
+                            </div>
+                            <div class="field">
+                                <label class="label" for="input-address">주소</label>
+                                <p>
+                                    <input id="input-address" class="input" placeholder="{{ user_info.address }}"
+                                           value="{{ user_info.address }}" style="width: 485px">
+                                    <button class="button is-light" style="float: right" onclick="juso()">
+                                        주소검색
+                                    </button>
+                                </p>
                             </div>
                             <div class="field">
                                 <label class="label" for="input-pic">프로필 사진</label>
@@ -310,7 +457,7 @@
                                 </div>
                                 <div class="level-right">
                                     <div class="level-item">
-                                        <a class="button is-sparta" onclick="update_profile()">업데이트</a>
+                                        <a class="button is-sparta" onclick="update_profile('{{user_info.nickname}}')">업데이트</a>
                                     </div>
                                     <div class="level-item">
                                         <a class="button is-sparta is-outlined"
