add:채팅기능개선

--- a/templates/post.html
+++ b/templates/post.html
@@ -283,8 +283,8 @@
     </div>
 </div>
 
-<div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden;">
-    <iframe src="http://localhost:5000/posts/{{ post.idx }}/chat" width="320" height="450"></iframe>
+<div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden; overflow-x:hidden;overflow-y:hidden">
+    <iframe src="http://localhost:5000/posts/{{ post.idx }}/chat" width="300" height="468" ></iframe>
 </div>
 </body>
 </html>
