--- a/templates/chat.html
+++ b/templates/chat.html
@@ -14,6 +14,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+       <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <style>
         .jstalktheme {
@@ -120,6 +123,12 @@
             display: table-cell;
             vertical-align: middle;
         }
+        .quit{
+            background-color: #9bbad8;
+            width: 300px;
+            height: 36px;
+        }
+
 
     </style>
     <script type="text/javascript" charset="utf-8">
@@ -143,26 +152,13 @@
                     m = "0"+m;
                 }
                 let time = ampm + " " + h + ":" + m;
-                if (msg.type==0) {
-                    let temp_html = `<div class="mytalk">
-                                            <div class="profile_image" style="background:url(/static/profile_image.png) no-repeat;"></div>
-                                            <div class="box">
-                                                <div class="profile_name">{{user_info.username}}</div>
-                                                <div class="a"></div>
-                                                <div class="b">${msg.data}</div>
-                                                <div class="time">${time}</div>
-                                            </div>
-                                            <div class="clear"></div>
-                                      </div>
-                                      <div class="blank"></div>`
-                     $('#msg').append(temp_html)
-                } else if(msg.type==2){
-                    let temp_html = `<h2>${msg.data}</h2>`
+                if(msg.type==2){
+                    let temp_html = `<h5>${msg.data}</h5>`
                      $('#msg').append(temp_html)
                 }
                 else {
                     let temp_html = `<div class="othertalk">
-                                            <div class="profile_image" style="background:url(/static/profile_image.png) no-repeat;"></div>
+                                            <div class="profile_image" style=" background:url('/static/${msg.image}') no-repeat; background-size: cover;"></div>
                                             <div class="box">
                                                 <div class="profile_name"><strong>${msg.name}</strong></div>
                                                 <div class="a"></div>
@@ -201,12 +197,14 @@
                 return false;
              });
 
+             $('#quit_room').click(function (){ //연결끊기
+                 socket.emit('leave', {room: '{{ post.idx }}'});
+                 window.top.location.href = 'http://localhost:5000/posts/{{ post.idx }}'
+                 return false;
+             });
+
             $('form#close').submit(function(event) { //방을 아예 닫기
                 socket.emit('close_room', {room: $('#close_room').val()});
-                return false;
-            });
-            $('form#disconnect').submit(function(event) { //연결 끊기
-                socket.emit('disconnect_request');
                 return false;
             });
 
@@ -229,6 +227,9 @@
     </script>
 </head>
 <body>
+    <div class="quit">
+        <button type="button" class="btn btn-outline-danger" id="quit_room" style="float: right; " >x</button>
+    </div>
     <div class="jstalktheme" id="jstalktheme_test" style="width: 300px; height: 430px;">
 
     <div class="msg" id="msg">
