modify:날짜 post수정
날짜 post값 수정하였고 필요없는 사진파일삭제함

--- a/templates/posting.html
+++ b/templates/posting.html
@@ -183,7 +183,7 @@
         function posting() {
             //input값 가져오기
             let title = $('#title').val()
-            let date = $('#date').val()
+            let date = $('#calender').val()
             let price = $('#price').val()
             let content = $('#content').val()
             let address = $('#local_address').val()
