--- a/templates/post.html
+++ b/templates/post.html
@@ -33,8 +33,12 @@
 
     <style>
         body {
-            width: 1000px;
+            width: 1200px;
             margin: auto;
+        }
+
+        .size{
+            width: 1000px;
         }
 
         .hero-img {
@@ -144,24 +148,16 @@
         .heart-icon {
 
         }
+
     </style>
 
     <script>
-        let y_cen = {
-        {
-            post.y
-        }
-        }
-        ;   // lat
-        let x_cen = {
-        {
-            post.x
-        }
-        }
-        ;  // long
+        {#let y_cen = {{post.y }};   // lat#}
+        {#let x_cen = {{post.x}};  // long#}
         let map;
         let markers = [];
         let infowindows = [];
+
         $(document).ready(function () {
             var floatPosition = parseInt($(".sideBanner").css('top'))
 
@@ -179,7 +175,6 @@
             }).scroll();
 
             $(".sideBanner").click(function () {
-                // window.open('http://localhost:5000/detail/100','new','width= 320px,height=480px,scrollbars=yes');
                 console.log(document.getElementById("frame").style.visibility)
                 if (document.getElementById("frame").style.visibility == "hidden") {
                     document.getElementById("frame").style.visibility = "visible"
@@ -202,7 +197,7 @@
                 }
             });
 
-            get_locate();
+            //get_locate();
 
         });
 
@@ -254,6 +249,11 @@
     </script>
 </head>
 <body>
+<div class="sideBanner">
+    <span class="txt-label">
+    </span>
+</div>
+<div class = "size">
 <div class="user">
     <section class="float-right login-btn" onclick="location.href='/user/{{user_info.username}}'">
         <!--로그인-->
@@ -273,10 +273,7 @@
         <!--로그인-->
     </section>
 </div>
-<div class="sideBanner">
-    <span class="txt-label">
-    </span>
-</div>
+
 <section class="hero" onclick="window.location.href='/'">
     <div class="hero-body">
         <img class="hero-img" src="/static/gogumacat.png">
@@ -328,6 +325,7 @@
 
 <div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden; overflow-x:hidden;overflow-y:hidden">
     <iframe src="http://localhost:5000/posts/{{ post.idx }}/chat" width="300" height="468" ></iframe>
+</div>
 </div>
 </body>
 </html>
