--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,15 @@
             margin-top: 30px;
         }
 
+        .address-text {
+            font-size: 14px;
+        }
+        .small-text {
+            font-size: 12px;
+            color: gray;
+            margin-top: 5px;
+        }
+
     </style>
 
     <script>
@@ -129,15 +138,14 @@
         function make_post(post) {
             let temp_html = `<div class="col">
                                 <div class="card h-100" id="card-${post['idx']}">
+                                    <!--사진 수정-->
                                     <img src="" class="card-img-top" onclick="location.href='/posts/${post['idx']}'">
                                     <div class="card-body">
                                         <h5 class="card-title" onclick="location.href='/posts/${post['idx']}'">${post['title']}</h5>
-                                        <p class="card-text">${post['nickname']}</p>
-                                        <p class="card-text">
-                                            <i class="fa-regular fa-heart"></i>
-                                            <i class="fa-solid fa-heart"></i>
-                                            ${post['like_count']}
-                                        </p>
+                                        <p class="card-text" style="font-weight: bold;">${post['price']}원</p>
+<!--                                        동으로 뜨면 좋을듯-->
+                                        <p class="address-text">${post['address']}</p>
+                                        <p class="card-text small-text">관심 ${post['like_count']}</p>
                                     </div>
                                 </div>
                             </div>`
@@ -250,7 +258,7 @@
     <i class="fa-solid fa-cat fa-lg"></i>
     <span style="font-weight: bold">&nbsp;&nbsp;"{{user_info.nickname}}"</span>님 환영합니다.
 </section>
-<section class="hero" onclick="window.location.href='/posting/{{user_info.username}}'">
+<section class="hero" onclick="window.location.href='/'">
     <div class="hero-body">
         <img class="hero-img" src="/static/gogumacat.png">
         <span class="title hero-font">
