--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,11 @@
             color: gray;
             margin-top: 5px;
         }
+        .image {
+            width :280px;
+            height:240px;
+            margin: 5px auto 0px auto;
+        }
 
     </style>
 
@@ -139,7 +144,7 @@
             let temp_html = `<div class="col">
                                 <div class="card h-100" id="card-${post['idx']}">
                                     <!--사진 수정-->
-                                    <img src="" class="card-img-top" onclick="location.href='/posts/${post['idx']}'">
+                                    <img src="/static/post_pic/${post['file']}" class="card-img-top image" onclick="location.href='/posts/${post['idx']}'">
                                     <div class="card-body">
                                         <h5 class="card-title" onclick="location.href='/posts/${post['idx']}'">${post['title']}</h5>
                                         <p class="card-text" style="font-weight: bold;">${post['price']}원</p>
