--- a/templates/post.html
+++ b/templates/post.html
@@ -153,6 +153,75 @@
             color: red;
         }
 
+        .infowindow {
+            width: 150px;
+            text-align: center;
+            padding: 6px 0;
+        }
+
+        .overlay_info {
+            border-radius: 6px;
+            margin-bottom: 12px;
+            float: left;
+            position: relative;
+            border: 1px solid #ccc;
+            border-bottom: 2px solid #ddd;
+            background-color: #fff;
+        }
+
+        .overlay_info:nth-of-type(n) {
+            border: 0;
+            box-shadow: 0px 1px 2px #888;
+        }
+
+        .overlay_info a {
+            display: block;
+            background: #d95050;
+            background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;
+            text-decoration: none;
+            color: #fff;
+            padding: 12px 36px 12px 14px;
+            font-size: 14px;
+            border-radius: 6px 6px 0 0
+        }
+
+        .overlay_info a strong {
+            background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_icon.png) no-repeat;
+            padding-left: 27px;
+        }
+
+        .overlay_info .desc {
+            padding: 14px;
+            position: relative;
+            min-width: 190px;
+            height: 56px
+        }
+
+        .overlay_info img {
+            vertical-align: top;
+        }
+
+        .overlay_info .address {
+            font-size: 12px;
+            color: #333;
+            position: absolute;
+            left: 80px;
+            right: 14px;
+            top: 24px;
+            white-space: normal
+        }
+
+        .overlay_info:after {
+            content: '';
+            position: absolute;
+            margin-left: -11px;
+            left: 50%;
+            bottom: -12px;
+            width: 22px;
+            height: 12px;
+            background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png) no-repeat 0 bottom;
+        }
+
     </style>
 
     <script>
@@ -163,87 +232,89 @@
         //맵 생성하기
         function map() {
             var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+                mapCenter = new kakao.maps.LatLng(33.5563, 126.7958), // 지도의 중심좌표
                 mapOption = {
-                    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                    center: mapCenter, // 지도의 중심좌표
                     level: 3 // 지도의 확대 레벨
                 };
 
-            // 지도를 생성합니다
             var map = new kakao.maps.Map(mapContainer, mapOption);
 
-            // 주소-좌표 변환 객체를 생성합니다
-            var geocoder = new kakao.maps.services.Geocoder();
+// 커스텀 오버레이에 표시할 내용입니다
+// HTML 문자열 또는 Dom Element 입니다
+            var content = '<div class="overlay_info">';
+            content += '    <a href="https://place.map.kakao.com/17600274" target="_blank"><strong>월정리 해수욕장</strong></a>';
+            content += '    <div class="desc">';
+            content += '        <img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_thumb.png" alt="">';
+            content += '        <span class="address">{{ post.address }}</span>';
+            content += '    </div>';
+            content += '</div>';
 
-            // 주소로 좌표를 검색합니다
-            geocoder.addressSearch('{{ post.address }}', function (result, status) {
+// 커스텀 오버레이가 표시될 위치입니다
+            var position = new kakao.maps.LatLng(33.55635, 126.795841);
 
-                // 정상적으로 검색이 완료됐으면
-                if (status === kakao.maps.services.Status.OK) {
+// 커스텀 오버레이를 생성합니다
+            var mapCustomOverlay = new kakao.maps.CustomOverlay({
+                position: position,
+                content: content,
+                xAnchor: 0.5, // 커스텀 오버레이의 x축 위치입니다. 1에 가까울수록 왼쪽에 위치합니다. 기본값은 0.5 입니다
+                yAnchor: 1.1 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
+            });
 
-                    var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+// 커스텀 오버레이를 지도에 표시합니다
+            mapCustomOverlay.setMap(map);
 
-                    // 결과값으로 받은 위치를 마커로 표시합니다
-                    var marker = new kakao.maps.Marker({
-                        map: map,
-                        position: coords
-                    });
+            var rvContainer = document.getElementById('roadview'); //로드뷰를 표시할 div
+            var rv = new kakao.maps.Roadview(rvContainer); //로드뷰 객체
+            var rvClient = new kakao.maps.RoadviewClient(); //좌표로부터 로드뷰 파노ID를 가져올 로드뷰 helper객체
 
-                    // 인포윈도우로 장소에 대한 설명을 표시합니다
-                    var infowindow = new kakao.maps.InfoWindow({
-                        content: '<div style="width:150px;text-align:center;padding:6px 0;">직거래장소</div>'
-                    });
-                    infowindow.open(map, marker);
+//지도의 중심좌표와 가까운 로드뷰의 panoId를 추출하여 로드뷰를 띄운다.
+            rvClient.getNearestPanoId(mapCenter, 50, function (panoId) {
+                rv.setPanoId(panoId, mapCenter); //panoId와 중심좌표를 통해 로드뷰 실행
+            });
 
-                    // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                    map.setCenter(coords);
+            kakao.maps.event.addListener(rv, 'init', function () {
 
-                    function search() {
-                        let query = $('#search-box').val();
-                        if (query == "") {
-                            alert("검색어를 입력하세요");
-                            return;
-                        } else {
-                            $.ajax({
-                                type: "GET",
-                                url: `/search?query=${query}`,
-                                data: {},
-                                success: function (response) {
-                                    $("#card-box").empty();
-                                    let posts = response["posts"];
-                                    for (let i = 0; i < posts.length; i++) {
-                                        make_post(posts[i], i);
-                                    }
+                // 커스텀 오버레이를 생성합니다
+                var rvCustomOverlay = new kakao.maps.CustomOverlay({
+                    position: position,
+                    content: content,
+                    xAnchor: 0.5, // 커스텀 오버레이의 x축 위치입니다. 1에 가까울수록 왼쪽에 위치합니다. 기본값은 0.5 입니다
+                    yAnchor: 0.5 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
+                });
 
-                                    $("#query-text-box").append(`"${query}" 검색내역 입니다.`)
-                                    $("#query-text-box").removeClass("is-hidden");
-                                }
-                            });
-                        }
-                    }
-                }
-            })
+                //rvCustomOverlay.setAltitude(2); //커스텀 오버레이의 고도값을 설정합니다.(로드뷰 화면 중앙이 0입니다)
+                rvCustomOverlay.setMap(rv);
+
+                var projection = rv.getProjection(); // viewpoint(화면좌표)값을 추출할 수 있는 projection 객체를 가져옵니다.
+
+                // 커스텀오버레이의 position과 altitude값을 통해 viewpoint값(화면좌표)를 추출합니다.
+                var viewpoint = projection.viewpointFromCoords(rvCustomOverlay.getPosition(), rvCustomOverlay.getAltitude());
+
+                rv.setViewpoint(viewpoint); //커스텀 오버레이를 로드뷰의 가운데에 오도록 로드뷰의 시점을 변화 시킵니다.
+            });
         }
 
-                    function sign_out() {
-                        $.removeCookie('mytoken', {path: '/'});
-                        alert('로그아웃!')
-                        window.location.href = "/login"
-                    }
+        function sign_out() {
+            $.removeCookie('mytoken', {path: '/'});
+            alert('로그아웃!')
+            window.location.href = "/login"
+        }
 
-                    function kakaoLogout() {
-                        if (Kakao.Auth.getAccessToken()) {
-                            Kakao.API.request({
-                                url: '/v1/user/unlink',
-                                success: function (response) {
-                                    console.log(response)
-                                },
-                                fail: function (error) {
-                                    console.log(error)
-                                },
-                            })
-                            Kakao.Auth.setAccessToken(undefined)
-                        }
-                    }
+        function kakaoLogout() {
+            if (Kakao.Auth.getAccessToken()) {
+                Kakao.API.request({
+                    url: '/v1/user/unlink',
+                    success: function (response) {
+                        console.log(response)
+                    },
+                    fail: function (error) {
+                        console.log(error)
+                    },
+                })
+                Kakao.Auth.setAccessToken(undefined)
+            }
+        }
 
     </script>
 </head>
@@ -318,7 +389,11 @@
             <h1>{{ post.title }}</h1>
             <h3>가격:{{ post.price }}</h3>
         </div>
-        <div id="map" style="width:500px;height:350px;"></div>
+    <div>
+       <div id="map" style="width:400px;height:350px;"></div> <!-- 지도를 표시할 div 입니다 -->
+        <div id="roadview" style="width:400px;height:350px"></div> <!-- 로드뷰를 표시할 div 입니다 -->
+    </div>
+
         <div class="content-info">
             <h1> {{ post.content }}</h1>
         </div>
