move: css  파일 분리
css 파일 분리했습니다

--- a/templates/posting.html
+++ b/templates/posting.html
@@ -38,63 +38,10 @@
 
     <!--javascript 분리-->
     <script src="{{ url_for('static', filename='posting.js') }}"></script>
+
+    <!-- css 분리-->
+    <link rel="stylesheet" type="text/css" href="/static/css/posting.css"/>
     <meta charset="UTF-8">
-
-
-    <style>
-        body {
-            width: 1000px;
-            margin: auto;
-        }
-        .hero-body {
-            padding: 16px;
-        }
-        .hero-img {
-            width: 60px;
-            height: 60px;
-        }
-
-        .hero-font {
-            /*color: #C886A4;*/
-            color: #543343;
-            font-family: 'Noto Sans KR', sans-serif;
-
-        }
-
-        .wrap {
-            width: 700px;
-            margin: 100px auto 0px auto;
-        }
-
-        .input {
-            margin-top: 30px;
-        }
-
-        input::placeholder {
-            color: black;
-            font-weight: bold;
-        }
-
-        textarea::placeholder {
-            color: black;
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-
-        .posting {
-            margin-right: 20px;
-            float: right;
-        }
-
-        .calender {
-            font-size: 17px;
-            margin: 15px 0px 0px 5px;
-        }
-
-    </style>
-    <script>
-
-    </script>
 
 </head>
 <body>
